--- a/pom.xml
+++ b/pom.xml
@@ -1,79 +1,61 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>mx.randalf.archive</groupId>
-  <artifactId>RandalfArchive</artifactId>
-  <version>2.0.0</version>
-  <description>Librerie utilizzzate per la identificazione e gestione delle dieverse tipologie di files</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>mx.randalf.archive</groupId>
+	<artifactId>RandalfArchive</artifactId>
+	<version>2.0.0</version>
+	<description>Librerie utilizzzate per la identificazione e gestione delle dieverse tipologie di files</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-compress</artifactId>
-  		<version>1.20</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>mx.randalf.xsd</groupId>
-  		<artifactId>RandalfXsd</artifactId>
-  		<version>2.0.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>mx.randalf.tools</groupId>
-  		<artifactId>RandalfTools</artifactId>
-  		<version>2.0.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>mx.randalf.digital</groupId>
-  		<artifactId>RandalfDigital</artifactId>
-  		<version>2.0.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.jwat</groupId>
-  		<artifactId>jwat-warc</artifactId>
-  		<version>1.0.4</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.jwat</groupId>
-  		<artifactId>jwat-tools</artifactId>
-  		<version>0.6.2</version>
-  	</dependency>
-  </dependencies>
-<!--
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.20</version>
+		</dependency>
+		<dependency>
+			<groupId>mx.randalf.xsd</groupId>
+			<artifactId>RandalfXsd</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>mx.randalf.tools</groupId>
+			<artifactId>RandalfTools</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>mx.randalf.digital</groupId>
+			<artifactId>RandalfDigital</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jwat</groupId>
+			<artifactId>jwat-warc</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jwat</groupId>
+			<artifactId>jwat-tools</artifactId>
+			<version>0.6.2</version>
+		</dependency>
+	</dependencies>
+	<!-- <distributionManagement> <repository> <uniqueVersion>false</uniqueVersion> 
+		<id>sftp-repository-stable</id> <url>scpexe://maven.bncf.lan/var/www/maven.bncf.lan/repository/release</url> 
+		<layout>default</layout> </repository> </distributionManagement> <repositories> 
+		<repository> <snapshots> <enabled>false</enabled> </snapshots> <id>randalf.mx-release</id> 
+		<url>http://maven.bncf.lan/repository/release</url> </repository> </repositories> 
+		<build> <extensions> <extension> <groupId>org.apache.maven.wagon</groupId> 
+		<artifactId>wagon-ssh-external</artifactId> <version>1.0-beta-6</version> 
+		</extension> </extensions> </build> -->
 	<distributionManagement>
 		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>sftp-repository-stable</id>
-			<url>scpexe://maven.bncf.lan/var/www/maven.bncf.lan/repository/release</url>
-			<layout>default</layout>
+			<id>mvn-bncf</id>
+			<name>Maven BNCF-releases</name>
+			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
 		</repository>
 	</distributionManagement>
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<id>randalf.mx-release</id>
-			<url>http://maven.bncf.lan/repository/release</url>
-		</repository>
-	</repositories>
-	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh-external</artifactId>
-				<version>1.0-beta-6</version>
-			</extension>
-		</extensions>
-	</build>
--->
-  <distributionManagement>
-    <repository>
-        <id>mvn-bncf</id>
-        <name>Maven BNCF-releases</name>
-        <url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
-    </repository>
-</distributionManagement>
 </project>
