--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>mx.randalf.archive</groupId>
 	<artifactId>RandalfArchive</artifactId>
-	<version>2.0.1</version>
+	<version>2.0.2</version>
 	<description>Librerie utilizzzate per la identificazione e gestione delle dieverse tipologie di files</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,6 +41,11 @@
 			<groupId>org.jwat</groupId>
 			<artifactId>jwat-tools</artifactId>
 			<version>0.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.marc4j</groupId>
+			<artifactId>marc4j</artifactId>
+			<version>2.9.1</version>
 		</dependency>
 	</dependencies>
 	<!-- <distributionManagement> <repository> <uniqueVersion>false</uniqueVersion> 
